<resources>
    <string name="app_name">GbTesting</string>
    <string name="save">SAVE</string>
    <string name="eMail">e-mail</string>
    <string name="eMailIsValid">E-mail address is valid</string>
    <string name="error">Error</string>
    <string name="title">TEST APP</string>
    <string name="empty">Empty</string>
    <string name="numberOfListItems">Number of list items</string>
    <string name="showList">Show list</string>
    <string name="addItem">Add item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>