<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.ListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/decaMargin"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/milliMargin"
            android:layout_gravity="center"
            android:text="@string/addItem"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>